--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/node": "^20.3.1",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
 		"svelte": "^3.54.0",
@@ -23,6 +24,5 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"mtgsdk": "^1.0.0"
 	}
 }
